--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
-site_name: fillname
-site_url: https://potassco.org/fillname
+site_name: typclingo
+site_url: https://potassco.org/typclingo
 site_description:
-repo_name: potassco/fillname
-repo_url: https://github.com/potassco/fillname
+repo_name: potassco/typclingo
+repo_url: https://github.com/potassco/typclingo
 copyright: Copyright &copy; 2024 Potassco
 
 extra_css:
@@ -61,7 +61,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/potassco/fillname
+      link: https://github.com/potassco/typclingo
     - icon: potassco-logo
       link: https://potassco.org
   generator: false
