--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: v2.3.1
     hooks:
     - id: autoflake
-      args: ["--in-place",  "--imports=fillname", "--ignore-init-module-imports", "--remove-unused-variables"]
+      args: ["--in-place",  "--imports=typclingo", "--ignore-init-module-imports", "--remove-unused-variables"]
       exclude: ^.github/
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
