--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: run CI test
 
 on:
-  push:
-    branches: [devel, main, master, wip]
-  pull_request:
-  workflow_call:
+  # NOTE: disabled while project is private
+  # push:
+  #   branches: [devel, main, master, wip]
+  # pull_request:
+  # workflow_call:
+  workflow_dispatch:
 
 env:
   FORCE_COLOR: "3"
@@ -19,20 +21,20 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-  
-    - name: install requirements
-      run: python -m pip install nox pre-commit
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
 
-    - name: run pre-commit
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      run: pre-commit run --all --show-diff-on-failure
+      - name: install requirements
+        run: python -m pip install nox pre-commit
 
-    - name: run tests
-      run: nox
+      - name: run pre-commit
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: pre-commit run --all --show-diff-on-failure
+
+      - name: run tests
+        run: nox
