--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,9 @@
 name: run CI test
 
 on:
-  # NOTE: disabled while project is private
-  # push:
-  #   branches: [devel, main, master, wip]
-  # pull_request:
-  # workflow_call:
-  workflow_dispatch:
+  push:
+    branches: [master]
+  pull_request:
 
 env:
   FORCE_COLOR: "3"
@@ -24,10 +21,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.14
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.12
 
       - name: install requirements
         run: python -m pip install nox pre-commit
